objects/Sitecore_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the Integrated Sites (ie: Advisory.com &amp; EAB.com)</description>
    <fields>
        <fullName>AdvAdmin_URL__c</fullName>
        <inlineHelpText>Base URL for the Advisory.com Admin Tool. This is used on the AdvAdmin search page to redirect the user to the User Detail View in the Admin Tool.</inlineHelpText>
        <label>AdvAdmin URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Advisory_Password_Reset_URL__c</fullName>
        <inlineHelpText>URL That is included in the password reset emails sent to Advisory.com Users.</inlineHelpText>
        <label>Advisory Password Reset URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Advisory_com_SF_URL__c</fullName>
        <description>ie: http://advisorytest.advsfdc.cs14.force.com/Query is the URL for the Test environment</description>
        <inlineHelpText>URL of the Salesforce Sites page that hosts the Advisory.com page. to go Setup -&gt; Develop -&gt; Sites to get the URL for the Advisory.com Site.</inlineHelpText>
        <label>Advisory.com SF URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EAB_Password_Reset_URL__c</fullName>
        <label>EAB Password Reset URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Encryption_Key__c</fullName>
        <inlineHelpText>Key used for encrypting data sent between SF and Integrated Sites.</inlineHelpText>
        <label>Encryption Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sitecore Settings</label>
</CustomObject>